--- a/src/main/webapp/backend/css/style.css
+++ b/src/main/webapp/backend/css/style.css
@@ -14,12 +14,7 @@ a {
   }
 
 #sidebar {
-    /* max-width: 250px; */
-    /* height: 600px; */
-    /* box-shadow: 0 0 10px 0 rgba(97, 97, 97, 0.5); */
-    /* background-color: #F8EEE6; */
     padding: 10px;
-    /* z-index: 100; */
     position: sticky;
 }
 
@@ -42,8 +37,8 @@ li.sidebar-item a.sidebar-link2 {
     padding-left: 5px;
     border-left: 2px solid #FABA91;
     margin-left: 60px;
-    margin-top: 15px;
-    display: inline;   
+    /* margin-top: 15px; */
+    /* display: inline;    */
     line-height: 2;
 }
 
@@ -65,7 +60,7 @@ li.sidebar-item a.sidebar-link2 {
   }
 
 .sidebar-item {
-    transition: background-color 0.2s; 
+    /* transition: background-color 0.2s;  */
     border-radius: 10px;
 }
 
@@ -84,4 +79,3 @@ li.sidebar-item a.sidebar-link2 {
     color: #626262; 
     border-left: 2px solid #626262;
 }
-
