--- a/src/main/resources/templates/productPage.html
+++ b/src/main/resources/templates/productPage.html
@@ -3,7 +3,7 @@
 <head>
     <title>商品管理</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/productPage.css">
+    <link rel="stylesheet" href="/woof/css/productPage.css">
 </head>
 <body>
 
@@ -62,11 +62,11 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="/js/productPage.js"></script>
-<script src="/js/pagination.js"></script>
-<script src="/js/productStatus.js"></script>
-<script src="/js/selectAllCheckbox.js"></script>
-<script src="/js/modal.js"></script>
+<script src="/woof/js/productPage.js"></script>
+<script src="/woof/js/pagination.js"></script>
+<script src="/woof/js/productStatus.js"></script>
+<script src="/woof/js/selectAllCheckbox.js"></script>
+<script src="/woof/js/modal.js"></script>
 
 
 </body>
