--- a/src/main/webapp/frontend/cartlist/css/finishorder.css
+++ b/src/main/webapp/frontend/cartlist/css/finishorder.css
@@ -3,3 +3,7 @@ body {
 		Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica,
 		Arial, sans-serif;
 }
+
+.swal2-styled.swal2-confirm:focus {
+    box-shadow: 0 0 0px 3px #FCDABF; 
+}
