--- a/src/main/resources/static/css/productPage.css
+++ b/src/main/resources/static/css/productPage.css
@@ -38,3 +38,19 @@ table th, table td {
 table thead th {
     background-color: #f3e9e9;
 }
+
+.highlighted-row {
+    animation: highlight-animation 2s ease;
+}
+
+/* 當滑鼠移到某一行上時的樣式 */
+.product-row:hover {
+    background-color: #f0f0f0;
+    /*color: #5cbcef; !* 文字顏色變更 *!*/
+}
+
+
+@keyframes highlight-animation {
+    0% { background-color: #ffff99; }
+    100% { background-color: transparent; }
+}
