--- a/src/main/webapp/backend/css/style.css
+++ b/src/main/webapp/backend/css/style.css
@@ -37,8 +37,8 @@ li.sidebar-item a.sidebar-link2 {
     padding-left: 5px;
     border-left: 2px solid #FABA91;
     margin-left: 60px;
-    /* margin-top: 15px; */
-    /* display: inline;    */
+    margin-top: 15px;
+    display: inline;   
     line-height: 2;
 }
 
@@ -60,7 +60,7 @@ li.sidebar-item a.sidebar-link2 {
   }
 
 .sidebar-item {
-    /* transition: background-color 0.2s;  */
+    transition: background-color 0.2s; 
     border-radius: 10px;
 }
 
@@ -69,7 +69,7 @@ li.sidebar-item a.sidebar-link2 {
     cursor: pointer; 
 }
 
-.btn:hover {
+#sidebar .btn:hover {
     background-color: #8a8a8a;
     color: white;
 }
